AM_CPPFLAGS = -I..
bin_PROGRAMS = ch-rfsvp-mgr
ch_rfsvp_mgr_SOURCES = rfsvp_mgr.c \
					  rfsvp_mgr_cmd_parser.c \
					  rfsvp_mgr_main.c \
					  rfsvp_mgr_node_task.c \
					  rfsvp_mgr_send_msg.c \
					  rfsvp_mgr_cmd_interpret.c \
					  rfsvp_mgr_cmd_task.c \
					  rfsvp_mgr_node_setup.c \
					  rfsvp_mgr_node_utils.c

