AM_CPPFLAGS = -I..
bin_PROGRAMS = ch-rfsvp-server
ch_rfsvp_server_SOURCES =  \
									rfsvp_server_algo.c \
									rfsvp_server_algo_msg.c \
									rfsvp_server_algo_sub_state.c \
									rfsvp_server_algo_task.c \
									rfsvp_server_app_msg.c \
									rfsvp_server.c \
									rfsvp_server_main.c \
									rfsvp_server_node_msgs.c \
									rfsvp_server_node_setup.c \
									rfsvp_server_node_task.c \
									rfsvp_server_node_utils.c \
									rfsvp_server_send_msg.c
